Edge slide not working in certain circumstance from Front / Side views #32068

Closed
opened 2012-07-11 05:30:01 +02:00 by Olson Burry · 6 comments

%%%In example .blend provided, loop cutting the extuded central part of the mesh from front / side views, results in the edge loop not being able to slide after making the cut, or subsequently trying ctrl + E -> edge slide

Rotate the view slghtly and the issue appears to go away.

"Factor" can be adjusted manually in the operator panel, just mouse doesn't seem to work from these views

This happen in 2.63, 2.63a and SVN 48798. Linux 64bit

Thank you :)%%%

%%%In example .blend provided, loop cutting the extuded central part of the mesh from front / side views, results in the edge loop not being able to slide after making the cut, or subsequently trying ctrl + E -> edge slide Rotate the view slghtly and the issue appears to go away. "Factor" can be adjusted manually in the operator panel, just mouse doesn't seem to work from these views This happen in 2.63, 2.63a and SVN 48798. Linux 64bit Thank you :)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Attempting to add and slide a further loop to the lower part of the internal extusion actually results in not being able to slide from any viewing angle also%%%

%%%Attempting to add and slide a further loop to the lower part of the internal extusion actually results in not being able to slide from any viewing angle also%%%

%%%I can reproduce this issue. Stumbled over it as i did some modeling yesterday. Sliding it with the mouse does not work. But sliding by inserting the number does work and also writing the number in the operator panel does work.%%%

%%%I can reproduce this issue. Stumbled over it as i did some modeling yesterday. Sliding it with the mouse does not work. But sliding by inserting the number does work and also writing the number in the operator panel does work.%%%
Member

%%%Assigned to Bastien!%%%

%%%Assigned to Bastien!%%%

%%%Fixed in r49027. Thanks for reporting.%%%

%%%Fixed in r49027. Thanks for reporting.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32068
No description provided.