Fix [#32068] Edge slide not working in certain circumstance from Front / Side views

Only visible edges are used to create the "sliding vector". The test used to detect whether edges were visible or not was working for solid shading, but useless in wire draw mode (as all edges are visible in this mode!)...